--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -307,4 +307,7 @@
     <color name="dark_bg_light_hint_text">#80FFFFFF</color>
 
     <color name="chip_background">#E0E0E0</color>
+
+    <color name="colorPrimary">@color/purple_500</color>
+    <color name="gray_500">#9E9E9E</color>
 </resources>
