--- a/app/src/main/res/layout/fragment_agregar_vacuna.xml
+++ b/app/src/main/res/layout/fragment_agregar_vacuna.xml
@@ -19,10 +19,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- Toolbar personalizado -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarVacuna"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#6750A4"
+            android:elevation="4dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationIcon="@drawable/ic_back"
+            app:title="Nueva Vacunación"
+            app:titleTextColor="@android:color/white" />
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:fillViewport="true"
+            app:layout_constraintTop_toBottomOf="@id/toolbarVacuna"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <LinearLayout
