--- a/app/src/main/res/layout/fragment_lista_vacunas.xml
+++ b/app/src/main/res/layout/fragment_lista_vacunas.xml
@@ -24,7 +24,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
+        <!-- Toolbar personalizado -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarVacunas"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#6750A4"
+            android:elevation="4dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationIcon="@drawable/ic_back"
+            app:title="Vacunas"
+            app:titleTextColor="@android:color/white" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardPaciente"
@@ -33,7 +43,7 @@
             android:layout_margin="8dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="4dp"
-            app:layout_constraintTop_toBottomOf="@id/toolbar">
+            app:layout_constraintTop_toBottomOf="@id/toolbarVacunas">
 
             <LinearLayout
                 android:layout_width="match_parent"
